force-app/main/default/objects/Opportunity/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Checks if the contract is Active or Not.</description>
    <formula>Contract_Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= Contract_End_Date__c</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>