force-app/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The day the contract starts.</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>