force-app/main/default/objects/Opportunity/fields/Industry_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_NAICS_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry NAICS Code</label>
    <referenceTo>Industry_Fund__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>