force-app/main/default/objects/Opportunity/fields/Remaining_Days_Contract_Expires__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days_Contract_Expires__c</fullName>
    <description>Calculates the contract expiration day.</description>
    <formula>IF(Contract_End_Date__c - TODAY() &gt; 0, Contract_End_Date__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days: Contract Expires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>