force-app/main/default/objects/Opportunity/fields/Send_Warning_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Warning_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send an Email warning the business that their funds will be revoked due to them no longer meeting the contract requirements</description>
    <inlineHelpText>Uncheck: means everything is good and the business is meeting the requirements on the contract.
Check: means to send an email, warning the business that their funds will be revoked due to them no longer meeting the contract requirements. Will grant them 7 days to get back on track, else funds are revoked.</inlineHelpText>
    <label>Send Warning Email</label>
    <type>Checkbox</type>
</CustomField>