force-app/main/default/objects/Opportunity/fields/Type_of_Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work_Category__c</fullName>
    <label>Type of Work - Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Work_Category_GLOBAL</valueSetName>
    </valueSet>
</CustomField>