force-app/main/default/objects/Opportunity/validationRules/Contract_End_Date_before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_End_Date_before_Start_Date</fullName>
    <active>true</active>
    <description>Checks whether if the contract end date was set before the start date.</description>
    <errorConditionFormula>Contract_Start_Date__c &gt; Contract_End_Date__c</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>The contract end date can not be before the start date. Please fix the contract end date.</errorMessage>
</ValidationRule>