force-app/main/default/objects/Opportunity/listViews/Project_Performance_Stage_View.listView-meta.xml
<ListView>
    <fullName>Project_Performance_Stage_View</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Project Performance Stage</value>
    </filters>
    <label>Project Performance Stage View</label>
</ListView>